# python

./: .gitlab-ci.yml  CHANGELOG.md  CNAME  README.md  TODO.md  _config.yml  index.md  pyproject.toml  pyproject.toml.bak  requirements.txt  src.md  tox.ini
.github/workflows/: github-pages.yml  jekyll-gh-pages.yml  python-package.yml
docs/: ARCHITECTURE.md  CONVERTERS.md  README.md  SCHEMAS.md  TESTING.md  UPDATE.md  _config.yml  mypy_helper.md
docs/diagrams/: ARCHITECTURE_DIAGRAM.md  DATA_FLOW_DIAGRAM.md  EXTENSION_DIAGRAM.md  README.md  SEQUENCE_DIAGRAM.md
docs/pl/: ARCHITECTURE.md  CONVERTERS.md  README.md  SCHEMAS.md
docs/pl/diagrams/: ARCHITECTURE_DIAGRAM.md  DATA_FLOW_DIAGRAM.md  EXTENSION_DIAGRAM.md  README.md  SEQUENCE_DIAGRAM.md
examples/: cli_example.sh  conda_to_pip_example.py  pip_to_conda_example.py  pip_to_poetry_example.py  test_all_converters.py
scripts/: fix_black_config.py  fix_mypy_issues.py  fix_submodules.py  run_tests.py
spectomate/: __init__.py  __init__.py.bak  __main__.py  _version.py  _version.py.bak  cli.py  format_cli.py  git_cli.py  mypy_cli.py  test_cli.py  update_cli.py
spectomate/converters/: __init__.py  conda_to_pip.py  external_converters.py  pip_to_conda.py  pip_to_pdm.py  pip_to_pipenv.py  pip_to_poetry.py  poetry_to_conda.py  poetry_to_pip.py
spectomate/core/: __init__.py  base_converter.py  mypy_helper.py  registry.py  utils.py
spectomate/schemas/: __init__.py  conda_schema.py  pip_schema.py  pipenv_schema.py  poetry_schema.py
spectomate/tests/: test_conda_to_pip.py  test_pip_to_conda.py  test_pip_to_poetry.py  test_poetry_to_pip.py
update/: README.md  env_manager.py  git.sh  pypi.sh  src.py  submodules.sh  test.sh  test_code.py  version.sh
web/: Dockerfile  README.md  app.py  docker-compose.yml  index.html
web/css/: styles.css
web/js/: main.js
web/nginx/conf.d/: default.conf
